--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </article>
 
 			<article class="work-card work-card--blue" aria-labelledby="work1-title" role="article">
-        <a href="case1.html" class="work-card__link" aria-label="Read more about Thrive Health case study"></a>
+        <a href="case2.html" class="work-card__link" aria-label="Read more about Thrive Health case study"></a>
 
         <div class="work-card-upper">
           <div class="work-card__general-info">
@@ -106,7 +106,7 @@
       </article>
 
 			<article class="work-card work-card--yellow" aria-labelledby="work1-title" role="article">
-        <a href="case1.html" class="work-card__link" aria-label="Read more about Thrive Health case study"></a>
+        <a href="" class="work-card__link" aria-label="Read more about Thrive Health case study"></a>
 
         <div class="work-card-upper">
           <div class="work-card__general-info">
