--- a/case1.html
+++ b/case1.html
@@ -106,21 +106,173 @@
 			</div>
 		</section>
 
-		<section class="case-challenge" aria-labelledby="case-challenge-title">
-			<div class="container case-challenge__content">
-				<h2 id="case-challenge-title" class="case-challenge__heading">The challenge</h2>
-				<p class="case-challenge__paragraph">
-					The ER triage process was heavily manual, leading to long wait times and high nurse burden. The hospital needed a digital solution to streamline intake and improve the experience for families.
-				</p>
+		<section class="case-context" aria-labelledby="case-context-title">
+			<div class="container case-context__content">
+
+				<!-- Главный заголовок секции -->
+				<h2 id="case-context-title" class="case-context__heading">
+					A Canadian hospital approached us for a triage tool
+				</h2>
+
+				<!-- Пары: Problem / Solution / Contributions -->
+				<dl class="case-context__items">
+
+					<div class="case-context__item">
+						<dt class="case-context__term">Problem</dt>
+						<dd class="case-context__desc">
+							Canada’s healthcare system struggles with long ER wait times, often due to overworked staff. Triage nurses are stretched thin.
+							<strong>Introducing a digital intake tool could help prioritize patients more efficiently and allow nurses to focus on care.</strong>
+						</dd>
+					</div>
+
+					<div class="case-context__item">
+						<dt class="case-context__term">Solution</dt>
+						<dd class="case-context__desc">
+							We built a mobile- and tablet-first web tool that patients can access via a QR code upon arrival to the ER. It allows caregivers to complete a quick, guided assessment, receive clear instructions on where to go next and provides a natural language summary of the patient’s symptom for nurses to review.
+						</dd>
+					</div>
+
+					<div class="case-context__item">
+						<dt class="case-context__term">Key contributions</dt>
+						<dd class="case-context__desc">
+							<p>This was my first end-to-end design project as the sole designer. A big step after previously working under senior guidance!</p>
+  						<p>I led the design from strategy to handoff, including:</p>
+							<ul class="case-context__list">
+								<li>Mapping the full triage journey with clinicians and admin staff</li>
+								<li>Conducting competitor and paper research</li>
+								<li>Co-designed patient-facing flows for TVs and tablets with the clinical team</li>
+								<li>Designed high-contrast, WCAG-compliant UI to support quick scanning in high-stress settings</li>
+								<li>Collaborated closely with a PM and devs to ensure feasibility within clinical constraints</li>
+							</ul>
+						</dd>
+					</div>
+				</dl>
 			</div>
 		</section>
 
-		<section class="case-approach" aria-labelledby="case-approach-title">
-			<div class="container case-approach__content">
-				<h2 id="case-approach-title" class="case-approach__heading">My approach</h2>
-				<p class="case-appro
+		<!-- HOW MIGHT WE SECTION -->
+		 <section class="case-howmightwe" aria-labelledby="case-howmightwe-title">
+			<div class="container">
+				<h2 id="case-howmightwe-title" class="case-howmightwe__heading">
+					How might we... help young patients and their caregivers navigate the ER experience?
+				</h2>
 
->
+				<!-- Подблоки-ответы пойдут здесь -->
+				 <section class="case-howmightwe__block" aria-labelledby="case-howmightwe-1-title">
+					<h3 id="case-howmightwe-1-title" class="visually-hidden">
+						Visual example: helping patients navigate the ER
+					</h3>
+					<figure class="case-howmightwe__image-wrapper">
+						<img 
+							src="./assets/images/1_How_might_we1.png" 
+							alt="Illustration showing how the triage tool helps patients navigate the ER"
+							class="case-howmightwe__image"
+						/>
+					</figure>
+				</section>
+
+				<section class="case-howmightwe__block" aria-labelledby="case-howmightwe-2-title">
+					<div class="case-howmightwe__row">
+						<!-- Левая колонка -->
+						<h3 id="case-howmightwe-2-title" class="case-howmightwe__subheading">
+							Research and approach
+						</h3>
+					
+					<div class="case-howmightwe__right">
+
+						<div class="case-howmightwe__textblock">
+							<p>
+								This project was handed off to me from a fellow designer who worked on its earliest phase. I deepened the research she started by reviewing:
+							</p>
+							<ul class="case-howmightwe__list">
+								<li>Academic papers on digital triage systems (e.g. NHS eTriage, Johns Hopkins)</li>
+								<li>Best practices from existing tools</li>
+								<li>Guidelines for designing for high-stress environments</li>
+							</ul>
+							<p>
+								I also casually spoke with the parents I know about their experiences when taking children to the ER. (Ideally, I would’ve interviewed them in a more official manner, but due to the budget and timeline constraints of the project, I had to forgo the initial interview stage.)
+							</p>
+						</div>
+
+						<div class="case-howmightwe__card">
+							<div class="case-howmightwe__card-header">
+								<img src="./assets/icons/circle-question-mark.svg" alt="" aria-hidden="true" />
+								<h4 class="case-howmightwe__card-title">Key questions</h4>
+							</div>
+							<ul class="case-howmightwe__card-list">
+								<li>What makes <strong>existing digital triage solutions effective</strong> (or not)?</li>
+								<li>How can we <strong>reduce confusion and friction</strong> for users who are in <strong>pain or stressed out</strong>?</li>
+								<li><strong>Medical jargon can be complex</strong> – what can we do to help users better understand the questions they’re being asked?</li>
+								<li>How can we accommodate parents or guardians arriving at the ER with <strong>multiple sick children</strong>?</li>
+							</ul>
+						</div>
+					</div>
+				</section>
+			</div>
+		</section>
+
+		<!-- Goals for the app block -->
+		<section class="case-howmightwe__block" aria-labelledby="case-howmightwe-3-title">
+			 <div class="container">
+				<div class="case-howmightwe__row">
+					<!-- Левая колонка -->
+					<h3 id="case-howmightwe-3-title" class="case-howmightwe__subheading">
+						Goals for the app
+					</h3>
+
+					<!-- Правая колонка -->
+					<ul class="case-goals__list">
+						<li class="case-howmightwe__goals-item">
+							<div class="case-howmightwe__icon-wrapper">
+								<img src="./assets/icons/accessibility.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
+							</div>
+							<p class="case-howmightwe__goals-text">
+								<strong>Accessible</strong> for users with disabilities
+							</p>
+						</li>
+						<li class="case-howmightwe__goals-item">
+							<div class="case-howmightwe__icon-wrapper">
+								<img src="./assets/icons/languages.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
+							</div>
+							<p><strong>Bilingual (English/French)</strong> to support Canadian French-speaking population</p>
+						</li>
+						<li class="case-howmightwe__goals-item">
+							<div class="case-howmightwe__icon-wrapper">
+								<img src="./assets/icons/smile.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
+							</div>
+							<p><strong>Friendly and reassuring</strong> but not childish or immature</p>
+						</li>
+						<li class="case-howmightwe__goals-item">
+							<div class="case-howmightwe__icon-wrapper">
+								<img src="./assets/icons/milestone.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
+							</div>
+							<p><strong>Simple and intuitive</strong> to provide straightforward guidance for users who may be stressed out or in pain</p>
+						</li>
+						<li class="case-howmightwe__goals-item">
+							<div class="case-howmightwe__icon-wrapper">
+								<img src="./assets/icons/log-in.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
+							</div>
+							<p>Designed for use <strong>without login or account creation</strong></p>
+						</li>
+						<li class="case-howmightwe__goals-item">
+							<div class="case-howmightwe__icon-wrapper">
+								<img src="./assets/icons/file-edit.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
+							</div>
+							<p>Must allow users to <strong>revise previous answers easily</strong> (in case of mistakes or if the patient’s symptoms change)</p>
+						</li>
+						<li class="case-howmightwe__goals-item">
+							<div class="case-howmightwe__icon-wrapper">
+								<img src="./assets/icons/tablet-smartphone.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
+							</div>
+							<p><strong>Mobile-first:</strong> due to the hospital setting, users were most likely to access the tool via a phone or a tablet</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
+
+
+
 
 
   </main>
