finish the section How Do We in a case1 page

--- a/case1.html
+++ b/case1.html
@@ -172,7 +172,7 @@
 				</section>
 
 				<section class="case-howmightwe__block" aria-labelledby="case-howmightwe-2-title">
-					<div class="case-howmightwe__row">
+					<div class="case-howmightwe__row case-howmightwe__row--wide">
 						<!-- Левая колонка -->
 						<h3 id="case-howmightwe-2-title" class="case-howmightwe__subheading">
 							Research and approach
@@ -214,63 +214,188 @@
 		<!-- Goals for the app block -->
 		<section class="case-howmightwe__block" aria-labelledby="case-howmightwe-3-title">
 			 <div class="container">
-				<div class="case-howmightwe__row">
+				<div class="case-howmightwe__row case-howmightwe__row--wide">
 					<!-- Левая колонка -->
 					<h3 id="case-howmightwe-3-title" class="case-howmightwe__subheading">
 						Goals for the app
 					</h3>
 
 					<!-- Правая колонка -->
-					<ul class="case-goals__list">
-						<li class="case-howmightwe__goals-item">
-							<div class="case-howmightwe__icon-wrapper">
-								<img src="./assets/icons/accessibility.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
-							</div>
-							<p class="case-howmightwe__goals-text">
-								<strong>Accessible</strong> for users with disabilities
-							</p>
-						</li>
-						<li class="case-howmightwe__goals-item">
-							<div class="case-howmightwe__icon-wrapper">
-								<img src="./assets/icons/languages.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
-							</div>
-							<p><strong>Bilingual (English/French)</strong> to support Canadian French-speaking population</p>
-						</li>
-						<li class="case-howmightwe__goals-item">
-							<div class="case-howmightwe__icon-wrapper">
-								<img src="./assets/icons/smile.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
-							</div>
-							<p><strong>Friendly and reassuring</strong> but not childish or immature</p>
-						</li>
-						<li class="case-howmightwe__goals-item">
-							<div class="case-howmightwe__icon-wrapper">
-								<img src="./assets/icons/milestone.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
-							</div>
-							<p><strong>Simple and intuitive</strong> to provide straightforward guidance for users who may be stressed out or in pain</p>
-						</li>
-						<li class="case-howmightwe__goals-item">
-							<div class="case-howmightwe__icon-wrapper">
-								<img src="./assets/icons/log-in.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
-							</div>
-							<p>Designed for use <strong>without login or account creation</strong></p>
-						</li>
-						<li class="case-howmightwe__goals-item">
-							<div class="case-howmightwe__icon-wrapper">
-								<img src="./assets/icons/file-edit.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
-							</div>
-							<p>Must allow users to <strong>revise previous answers easily</strong> (in case of mistakes or if the patient’s symptoms change)</p>
-						</li>
-						<li class="case-howmightwe__goals-item">
-							<div class="case-howmightwe__icon-wrapper">
-								<img src="./assets/icons/tablet-smartphone.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
-							</div>
-							<p><strong>Mobile-first:</strong> due to the hospital setting, users were most likely to access the tool via a phone or a tablet</p>
-						</li>
-					</ul>
+					<div class="case-howmightwe__right">
+						<ul class="case-goals__list">
+							<li class="case-howmightwe__goals-item">
+								<div class="case-howmightwe__icon-wrapper">
+									<img src="./assets/icons/accessibility.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
+								</div>
+								<p class="case-howmightwe__goals-text">
+									<strong>Accessible</strong> for users with disabilities
+								</p>
+							</li>
+							<li class="case-howmightwe__goals-item">
+								<div class="case-howmightwe__icon-wrapper">
+									<img src="./assets/icons/languages.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
+								</div>
+								<p><strong>Bilingual (English/French)</strong> to support Canadian French-speaking population</p>
+							</li>
+							<li class="case-howmightwe__goals-item">
+								<div class="case-howmightwe__icon-wrapper">
+									<img src="./assets/icons/smile.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
+								</div>
+								<p><strong>Friendly and reassuring</strong> but not childish or immature</p>
+							</li>
+							<li class="case-howmightwe__goals-item">
+								<div class="case-howmightwe__icon-wrapper">
+									<img src="./assets/icons/milestone.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
+								</div>
+								<p><strong>Simple and intuitive</strong> to provide straightforward guidance for users who may be stressed out or in pain</p>
+							</li>
+							<li class="case-howmightwe__goals-item">
+								<div class="case-howmightwe__icon-wrapper">
+									<img src="./assets/icons/log-in.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
+								</div>
+								<p>Designed for use <strong>without login or account creation</strong></p>
+							</li>
+							<li class="case-howmightwe__goals-item">
+								<div class="case-howmightwe__icon-wrapper">
+									<img src="./assets/icons/file-edit.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
+								</div>
+								<p>Must allow users to <strong>revise previous answers easily</strong> (in case of mistakes or if the patient’s symptoms change)</p>
+							</li>
+							<li class="case-howmightwe__goals-item">
+								<div class="case-howmightwe__icon-wrapper">
+									<img src="./assets/icons/tablet-smartphone.svg" alt="" class="case-howmightwe__icon" aria-hidden="true" />
+								</div>
+								<p><strong>Mobile-first:</strong> due to the hospital setting, users were most likely to access the tool via a phone or a tablet</p>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</section>
 
+		<!--  -->
+		<section class="case-howmightwe__block" aria-labelledby="case-howmightwe-4-title">
+			<h3 id="case-howmightwe-4-title" class="visually-hidden">
+				System-level flow for the triage intake process
+			</h3>
+			<figure class="case-howmightwe__image-wrapper">
+				<img 
+					src="./assets/images/scheme.png" 
+					alt="User flow for a pediatric ER screener, showing steps from intro to triage questions, emergency alerts, and confirmation, with notes on accessibility and clarity."
+					class="case-howmightwe__image"
+				/>
+			</figure>
+		</section>
+
+		<!--  -->
+		<section class="case-howmightwe__block" aria-labelledby="case-howmightwe-5-title">
+			<div class="container">
+				<div class="case-howmightwe__row case-howmightwe__row--wide">
+					<h3 id="case-howmightwe-5-title" class="case-howmightwe__subheading">
+						User flows &amp; feature</br>mapping
+					</h3>
+					<div class="case-howmightwe__right">
+						<p>
+							Working with the PM and referencing clinician-created triage logic, I mapped user flows, information architecture, and feature mapping.
+						</p>
+						<p>
+							Based on this exercise, we have scoped the MVP features down to:
+						</p>
+						<ul>
+							<li>QR code initial screener access</li>
+							<li>Language selection</li>
+							<li>Screener (intro &amp; questions)</li>
+							<li>A summary card with triage direction and AI-generated patient summary</li>
+							<li>Wait time visibility</li>
+							<li>Ability to update symptoms and add multiple children</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="case-howmightwe__block" aria-labelledby="case-howmightwe-6-title">
+			<h3 id="case-howmightwe-6-title" class="visually-hidden">
+				Annotated user flow diagram for the triage experience
+			</h3>
+			<figure class="case-howmightwe__image-wrapper">
+				<img 
+					src="./assets/images/user_flow.png" 
+					alt="User flow diagram showing key triage steps from landing screen to intake summary with decision paths" 
+					class="case-howmightwe__image"
+				/>
+			</figure>
+		</section>
+
+		<section class="case-howmightwe__block" aria-labelledby="case-howmightwe-7-title">
+			<div class="container">
+				<div class="case-howmightwe__row case-howmightwe__row--wide">
+					<h3 id="case-howmightwe-7-title" class="case-howmightwe__subheading">
+						Prototyping and testing
+					</h3>
+					<div class="case-howmightwe__right">
+						<p>
+							I started with hand-drawn sketches and explored general layouts using our existing design system. Partway through, I learned that this was an experimental project — we were required to use Material UI (MUI) instead, as the team was evaluating more robust alternatives to our current system.
+						</p>
+						<p>
+							After familiarizing myself with MUI, I transitioned to high-fidelity Figma mocks, which we then used for usability testing with children and caregivers. While I usually prefer to test earlier in the design process, this project called for high-fidelity visuals to ensure the design resonated with child testers.
+						</p>
+						<p>
+							An external partner from the hospital team also ran a focus group with some patients from the hospital and shared their learnings with us.
+						</p>
+						<p>
+							Overall, the tool was deemed useful and easy to use. However, there was some room for improvement as well...
+						</p>
+
+						<!-- Findings from children -->
+						<div class="case-insight">
+							<div class="case-insight__header">
+								<div class="case-insight__icon-wrapper">
+									<img
+										src="./assets/icons/child.svg"
+										alt=""
+										class="case-insight__icon"
+										width="24"
+										height="24"
+									/>
+								</div>
+								<h4 class="case-insight__title">Findings from children</h4>
+							</div>
+							<ul class="case-insight__list">
+								<li>The assessment felt unengaging and boring</li>
+								<li>Visuals and interactions needed to be more playful and dynamic</li>
+								<li>Some of the language was too complex or hard to understand</li>
+							</ul>
+						</div>
+
+						<!-- Findings from parents -->
+						<div class="case-insight">
+							<div class="case-insight__header">
+								<div class="case-insight__icon-wrapper">
+									<img
+										src="./assets/icons/user.svg"
+										alt=""
+										class="case-insight__icon"
+										width="24"
+										height="24"
+									/>
+								</div>
+								<h4 class="case-insight__title">Findings from parents</h4>
+							</div>
+							<ul class="case-insight__list">
+								<li>The next steps after completing the screener were unclear, as the design prioritized the patient summary over follow-up instructions</li>
+								<li>It was confusing how to add a second patient, and unclear whether doing so would overwrite the first patient’s results</li>
+								<li>The swipe gesture to switch between patient cards lacked clear visual affordance</li>
+							</ul>
+						</div>
+
+						<p>
+							Based on these findings, I’ve updated the designs to address user frustrations. (I wish I had the time to run another batch of tests – but the turnaround time was tight! I tested internally to the best of my ability.)
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 
 
 
