Finish the draft for Case1

--- a/case1.html
+++ b/case1.html
@@ -181,7 +181,7 @@
 					<div class="case-howmightwe__right">
 
 						<div class="case-howmightwe__textblock">
-							<p>
+							<p class="add-small-margin-bottom">
 								This project was handed off to me from a fellow designer who worked on its earliest phase. I deepened the research she started by reviewing:
 							</p>
 							<ul class="case-howmightwe__list">
@@ -298,7 +298,7 @@
 						<p>
 							Working with the PM and referencing clinician-created triage logic, I mapped user flows, information architecture, and feature mapping.
 						</p>
-						<p>
+						<p class="add-small-margin-bottom">
 							Based on this exercise, we have scoped the MVP features down to:
 						</p>
 						<ul>
@@ -343,7 +343,7 @@
 						<p>
 							An external partner from the hospital team also ran a focus group with some patients from the hospital and shared their learnings with us.
 						</p>
-						<p>
+						<p class="add-small-margin-bottom">
 							Overall, the tool was deemed useful and easy to use. However, there was some room for improvement as well...
 						</p>
 
@@ -393,6 +393,232 @@
 							Based on these findings, I’ve updated the designs to address user frustrations. (I wish I had the time to run another batch of tests – but the turnaround time was tight! I tested internally to the best of my ability.)
 						</p>
 					</div>
+				</div>
+			</div>
+		</section>
+<!--  -->
+		<section class="case-highlights" aria-labelledby="case-highlights-title">
+			<div class="container">
+				<h2 id="case-highlights-title" class="case-highlights__title">
+					Design highlights
+				</h2>
+				
+				<div class="case-highlights__list">
+					
+					<!-- Один подблок -->
+					<article class="case-highlights__item">
+						<!-- Визуальная часть -->
+						<div class="case-highlights__visual">
+							<img 
+								src="./assets/images/case1_desing_highlight1_1.png" 
+								alt="Homepage welcome screen with nurse and child illustration" 
+								class="case-highlights__visual-image case-highlights__visual-image--wide"
+							/>
+							<img 
+								src="./assets/images/case1_desing_highlight1_2.png" 
+								alt="Wait time modal with bear illustration explaining expectations" 
+								class="case-highlights__visual-image case-highlights__visual-image--narrow"
+							/>
+						</div>
+
+						<!-- Текстовая часть -->
+						<div class="case-howmightwe__row case-howmightwe__row--wide">
+							<h3 class="case-howmightwe__subheading">Homepage</h3>
+							<div class="case-howmightwe__right">
+								<p>
+									I worked on a cozy yet clean visual language to create a calming atmosphere that helps put users at ease in a high-stress, long-wait ER environment.
+								</p>
+								<p>
+									I also wrote inclusive copy that speaks clearly to both patients and caregivers. Additionally, I designed a modal to clearly communicate expectations for the wait times widget.
+								</p>
+							</div>
+						</div>
+					</article>
+					<!-- Второй подблок -->
+					<article class="case-highlights__item">
+						<div class="case-highlights__visual">
+							<img 
+								src="./assets/images/case1_desing_highlight2_1.png" 
+								alt="Intro screen explaining the purpose of the screener with illustrated parent and child" 
+								class="case-highlights__visual-image case-highlights__visual-image--wide"
+							/>
+							<img 
+								src="./assets/images/case1_desing_highlight2_2.png" 
+								alt="Exit confirmation modal asking the user to confirm before leaving the screener" 
+								class="case-highlights__visual-image case-highlights__visual-image--narrow"
+							/>
+						</div>
+
+						<div class="case-howmightwe__row case-howmightwe__row--wide">
+							<h3 class="case-howmightwe__subheading">Intro screen</h3>
+							<div class="case-howmightwe__right">
+								<p>
+									I added an extra image to keep things visually interesting and help users stay engaged. I made sure to clearly explain the order of operations so users always know what’s coming next.
+								</p>
+								<p>
+									To avoid any accidental exits, I added a confirmation step that’s surfaced if the user tries to close the tab or navigate away.
+								</p>
+								<p>
+									Finally, I included info on what to expect once the screener is done, so users feel confident and prepared as they start the assessment.
+								</p>
+							</div>
+						</div>
+					</article>
+
+
+					<!-- Третий подблок -->
+					 <article class="case-highlights__item">
+						<div class="case-highlights__visual">
+							<img 
+								src="./assets/images/case1_desing_highlight3_1.png" 
+								alt="Screen showing patient age selection with a helper note explaining to fill the form as if you are the patient" 
+								class="case-highlights__visual-image case-highlights__visual-image--wide"
+							/>
+							<img 
+								src="./assets/images/case1_desing_highlight3_2.png" 
+								alt="Screen with injury-related question showing Yes and No radio buttons" 
+								class="case-highlights__visual-image case-highlights__visual-image--wide"
+							/>
+						</div>
+
+						<div class="case-howmightwe__row case-howmightwe__row--wide">
+							<h3 class="case-howmightwe__subheading">How old are you?</h3>
+							<div class="case-howmightwe__right">
+								<p>
+									During usability testing, the questions addressed to the user, like “How old are you?”, caused confusion for caregivers: they assumed it referred to their own age, not the child’s.
+								</p>
+								<p>
+									Due to technical constraints, we couldn’t split the flow into separate paths for caregivers and children. To resolve this, I added helper text to clarify whose age is being asked, reducing ambiguity without adding friction to the flow.
+								</p>
+							</div>
+						</div>
+					</article>
+
+					<!-- Четвертый подблок -->
+					 <article class="case-highlights__item">
+						<div class="case-highlights__visual">
+							<img 
+								src="./assets/images/case1_desing_highlight4_1.png" 
+								alt="Results screen showing a summary card with instructions, patient status, and a button to update symptoms or add new patient" 
+								class="case-highlights__visual-image case-highlights__visual-image--wide"
+							/>
+							<img 
+								src="./assets/images/case1_desing_highlight4_2.png" 
+								alt="Popovers for updating patient symptoms or adding a new patient, with clear headings and time information" 
+								class="case-highlights__visual-image case-highlights__visual-image--narrow"
+							/>
+						</div>
+
+						<div class="case-howmightwe__row case-howmightwe__row--wide">
+							<h3 class="case-howmightwe__subheading">Getting results</h3>
+							<div class="case-howmightwe__right">
+								<p>
+									I designed the results page to clearly communicate the result and next steps. The summary card includes an icon that reflects the result, a primary instruction, a timestamp, and a natural-language summary of the assessment answers.
+								</p>
+								<p>
+									To allow re-engagement, I added a “Complete the screener again” section.
+								</p>
+								<p>
+									Finally, a wait times widget, mirroring the one on the home page, helps set wait expectations and adds cohesion.
+								</p>
+							</div>
+						</div>
+					</article>
+
+					<!-- Пятый подблок -->
+					 <article class="case-highlights__item">
+						<div class="case-highlights__visual">
+							<img 
+								src="./assets/images/case1_desing_highlight5_1.png" 
+								alt="Scrollable results page showing multiple summary cards for different patients with age and navigation indicators" 
+								class="case-highlights__visual-image case-highlights__visual-image--900 case-highlights__visual-image--large"
+							/>
+						</div>
+
+						<div class="case-howmightwe__row case-howmightwe__row--wide">
+							<h3 class="case-howmightwe__subheading">Multiple patients</h3>
+							<div class="case-howmightwe__right">
+								<p>
+									I designed this page to display result cards for multiple patients in an easy-to-scan format. Each card shows the patient’s age and the order in which their forms were completed, making it easier to keep track of who’s who.
+								</p>
+								<p>
+									To indicate that more results are available, we used a combination of pagination and a visual scrolling affordance: part of the next card is visible at the screen’s edge, encouraging users to swipe or scroll.
+								</p>
+							</div>
+						</div>
+					</article>
+
+		<section class="case-howmightwe">
+			<h2 class="case-highlights__title case-highlights__title-no-top-margin">Collaboration and what’s next</h2>
+
+			<!-- Development collaboration -->
+			<div class="case-howmightwe__row ">
+				<h3 class="case-howmightwe__subheading">Development</br>collaboration</h3>
+				<div class="case-howmightwe__right">
+					<p>To help aid the development process, I:</p>
+					<ul class="case-howmightwe__goals-list">
+						<li class="case-howmightwe__goals-item">
+							<span class="case-howmightwe__icon" aria-hidden="true">
+								<img src="./assets/icons/file-pencil.png" alt="" width="24" height="24" />
+							</span>
+							<span><strong>Wrote detailed annotations in Figma</strong></span>
+						</li>
+						<li class="case-howmightwe__goals-item">
+							<span class="case-howmightwe__icon" aria-hidden="true">
+								<img src="./assets/icons/list-checks.png" alt="" width="24" height="24" />
+							</span>
+							<span><strong>Co-created acceptance criteria with the PM on the project</strong></span>
+						</li>
+						<li class="case-howmightwe__goals-item">
+							<span class="case-howmightwe__icon" aria-hidden="true">
+								<img src="./assets/icons/thumbs-up.png" alt="" width="24" height="24" />
+							</span>
+							<span><strong>Maintained open lines with the dev team for feedback and clarification</strong></span>
+						</li>
+						<li class="case-howmightwe__goals-item add-big-margin-bottom">
+							<span class="case-howmightwe__icon" aria-hidden="true">
+								<img src="./assets/icons/user-group.png" alt="" width="24" height="24" />
+							</span>
+							<span ><strong>Partnered with another designer for accessibility testing</strong></span>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+			<!-- Impact and learnings -->
+			<div class="case-howmightwe__row case-howmightwe__row--wide">
+				<h3 class="case-howmightwe__subheading">Impact and learnings</h3>
+				<div class="case-howmightwe__right">
+					<p>
+						During the test phase at the hospital, patients completed the digital assessment after being triaged by nurses. <strong>92% of the screener’s results matched nurse assessments.</strong> This showed that the tool was accurate and had a lot of potential!
+					</p>
+					<p>
+						This was a milestone project for me. I learned how to lead a complex design independently, closely collaborate cross-functionally, and think critically about accessibility, emotion, and simplicity when the users are under pressure while engaging with the tool.
+					</p>
+					<p class="add-big-margin-bottom">
+						A metaphor from our VP of Product stuck with me: when building an MVP, don’t start with a car door or bumper: start with a skateboard. That mindset helped me guide our scope and prioritize value and quick wins.
+					</p>
+				</div>
+			</div>
+
+			<!-- If continued -->
+			<div class="case-howmightwe__row case-howmightwe__row--wide">
+				<h3 class="case-howmightwe__subheading">If continued…</h3>
+				<div class="case-howmightwe__right">
+					<p class="add-small-margin-bottom">Future improvements I envisioned:</p>
+					<ul>
+						<li>Tooltips for complex medical terms</li>
+						<li>Separate flows for caregivers vs. older children</li>
+						<li>Visual enhancements and emotional cues</li>
+						<li>Options for disclosing sensory or neurodiverse needs</li>
+					</ul>
+					<p class="add-big-margin-bottom">This project solidified my confidence in independently leading complex, high-impact design work.</p>
+				</div>
+			</div>
+		</section>
+
+
+
 				</div>
 			</div>
 		</section>
